# a-small-numpy-word2vec

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
a_small_numpy_word2vec/: __init__.py  config.py  evals.py  model.py  preprocessing.py  training.py  typing_.py
datasets/: toy_corpus.txt
examples/: train_toy_corpus.py
tests/: test.py
